# Dromi

./: .gitignore  Dromi_GUI.py  Dromi_GUI.spec  Dromi_example.py  README.md  build_GUI.sh
dromi/: .gitignore  README.md  build_library.txt  importlib_usage.py  setup.cfg  setup.py
dromi/Environment/: env.yaml
dromi/src/dromi/: __init__.py  mutual_information.py  similarities.py  utils.py
