
[metadata]
name = dromi-artistworking43
version = 0.0.15
author = Lys Sanz Moreta
author_email = lys.sanz.moreta@outlook.com
description = Dromi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LysSanzMoreta/Dromi
project_urls =
    Bug Tracker = https://github.com/LysSanzMoreta/Dromi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True